--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
 .box-shadow{
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
 }
+
+.photoURL{
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
+    margin-right: 10px;
+}
